style.css
/* ... */
/* ======== header section end ======== */

/* ======== hero section start ======== */
/* mobile */
.hero-section {
  padding: 4vh 5vw;
  text-align: center;
  margin-bottom: -55vh;
}

.hero {
  padding: 4vh 5vw;
  text-align: center;
}

.hero-title {
  font-size: 3rem;
  font-weight: 600;
  margin-bottom: 5vh;
  line-height: 4rem;
}

.hero-subtitle {
  font-size: 0.8rem;
  line-height: 1.8rem;
  margin-bottom: 5vh;
  font-weight: 500;
}

.hero-btn {
  background-color: var(--primary-color);
  color: white;
  padding: 3vh 3vw;
  border: none;
  font-size: 1rem;
  cursor: pointer;
  font-weight: 400;
  margin-bottom: 5vh;
}

.hero-img {
  width: 80vw;
}

/* .hero-imgs{
  height: 100vh;
} */

.polcadot {
  position: relative;
  bottom: 18vh;
  left: 25vw;
  width: 20vw;
  display: inline-block;
  /* border: 3px solid red; */
  width: 40vw;
}

.rating i {
  color: var(--primary-color);
}

.rating {
  /* background-color: red; */
  background-color: white;
  position: relative;
  z-index: 2;
  border-radius: 10vw;
  width: max-content;
  padding: 2.5vh 5vw 2.5vh 5vw;
  /* position: absolute; */
  bottom: 38vh;
  left: 11vw;
  font-weight: 700;
}

.review img {
  display: inline-block;
  position: relative;
  top: 1.5vh;
}

.review span {
  display: inline-block;
  position: relative;
  bottom: 0.5vh;
}

.review {
  background-color: white;
  /* background-color: rgb(255, 0, 0); */
  position: relative;
  z-index: 2;
  border-radius: 10vw;
  width: max-content;
  padding: 0.2vw 4.5vw 5vw 4.5vw;
  /* position: absolute; */
  bottom: 36vh;
  left: 11vw;
  font-weight: 700;
  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.42);
  -webkit-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.42);
  -moz-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.42);
  /* border: 2px solid black; */
}

/* pc */
@media (min-width: 768px) {
  .hero-section {
    margin-bottom: -20vw;
  }

  .hero {
    display: flex;
    justify-content: center;
    gap: 10vw;
    padding: 5vh;
    /* margin-bottom: -10vh; */
  }

  .hero-img {
    width: 30vw;
  }

  .hero-texts {
    width: 40vw;
  }

  .hero-title {
    font-size: 4rem;
    text-align: left;
    line-height: 7rem;
    margin-bottom: 2vh;
    width: 35vw;
  }

  .hero-subtitle {
    font-size: 0.8rem;
    text-align: left;
    font-weight: 400;
    width: 30vw;
  }

  .hero-btn {
    width: 17vw;
  }

  .polcadot {
    width: 10vw;
    position: relative;
    /* border: 3px solid black; */
    bottom: 11vw;
    left: 11vw;
  }

  .rating {
    /* background-color: red; */
    background-color: white;
    position: relative;
    z-index: 2;
    border-radius: 10vw;
    width: max-content;
    padding: 2.5vh 2vw 2.5vh 2vw;
    /* position: absolute; */
    bottom: 35vw;
    left: 42vw;
    font-weight: 700;
  }

  .review img {
    display: inline-block;
    position: relative;
    top: 0.7vw;
  }

  .review span {
    display: inline-block;
    position: relative;
    bottom: 0.5vw;
  }

  .review {
    background-color: white;
    /* background-color: rgb(255, 0, 0); */
    position: relative;
    z-index: 2;
    border-radius: 10vw;
    width: max-content;
    padding: 0 1vw 1vw 1vw;
    /* position: absolute; */
    bottom: 44vw;
    left: 72vw;
    font-weight: 700;
    box-shadow: none;
  }
}
/* ======== hero section end ======== */

/* ======== brand logo section start ======== */
/* mobile */
.brand-logos-section {
  margin-bottom: 20vh;
  /* margin-top: -20vh; */
}

.brand-logos {
  width: 100%;
  height: 15vh;
  display: flex;
  justify-content: center;
  align-content: space-between;
  gap: 5%;
  flex-wrap: wrap;
  position: relative;
  top: 20vh;
  padding: 0vh 5vw 10vh 5vw;
}

.brand-logo img {
  width: 37vw;
}

/* pc */
@media screen and (min-width: 768px) {
  .brand-logos-section {
    margin-bottom: 3vw;
    width: 100%;
    margin-top: 0vw;
  }
  .brand-logos {
    width: 70%;
    top: -2vw;
    right: 2vw;
    border: none;
    padding: 10vh 5vw 10vh 0vw;
    align-self: left;
  }

  .brand-logo img {
    width: 13vw;
  }
}
/* ======== brand logo section end ======== */

/* ======== service section start ======== */
/* mobile */
.services {
  width: 100%;
  padding: 10vh 10vw;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 10vw;
  border-top: 1px solid rgba(0, 0, 0, 0.224);
  border-bottom: 1px solid rgba(0, 0, 0, 0.224);
}

.service-card {
  width: 35vw;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.service-logo i {
  color: var(--primary-color);
  font-size: 2rem;
}

.service-logo {
  background-color: var(--secondary-color);
  /* background-color: red; */
  width: fit-content;
  padding: 5vw;
  border-radius: 0.5vw;
}

.service-texts {
  text-align: center;
  padding: 2vh 0;
}

.service-title {
  font-size: 1rem;
  font-weight: 600;
  margin-bottom: 1vh;
}

.service-desc {
  font-size: 0.7rem;
}

/* pc */
@media screen and (min-width: 768px) {
  .services {
    flex-wrap: nowrap;
    gap: 5vw;
    padding: 4vw 6vw;
  }

  .service-section {
    margin: 15vh 0;
    margin-top: -3vh;
    margin-bottom: 3vw;
  }

  .service-logo {
    padding: 1vw;
    margin-right: 1.5vw;
  }

  .service-card {
    width: 25vw;
    flex-direction: row;
  }
}
/* ======== service section end ======== */

/* ======== benefit section start ======== */
/* mobile */
.benefit-img {
  margin: 10vh 0;
}

.benefit-img img {
  width: 60%;
  display: block;
  margin: 0 auto;
  /* opacity: 0; */
}

.benefit-img-back {
  background-color: #f0f1ec;
  /* background-color: #ccff00; */
  width: 70vw;
  height: 90vw;
  position: relative;
  bottom: 105vw;
  left: 14.5vw;
  z-index: -1;
}

.benefit-texts {
  text-align: center;
  margin-top: -90vw;
}

.benefit-mini-title {
  font-size: 0.8rem;
  font-weight: 600;
}

.benefit-title {
  font-size: 2rem;
  margin: 3vh 2vh;
  font-weight: 600;
}

.benefit-list ul li {
  width: 80%;
  margin: 3vh 15vw;
}

.benefit-list ul li i {
  color: var(--primary-color);
  font-size: 1.5rem;
}
/* ... */

